--- a/angularjs/WebContent/example10_5.html
+++ b/angularjs/WebContent/example10_5.html
@@ -17,6 +17,10 @@
 			];
 		});
 	</script>
+	<style>
+		.odd { background-color: lightcoral}
+		.even { background-color: lavenderblush}
+	</style>
 </head>
 <body>
 	<div id="todoPanel" class="panel" ng-controller="defaultCtrl">
@@ -25,22 +29,16 @@
 		<table class="table">
 			<thead>
 				<tr>
+					<th>No.</th>
 					<th>Action</th>
 					<th>Done</th>
 				</tr>
 			</thead>
 			<tbody>
-<!--
-					<tr ng-repeat="item in todos">
+				<tr ng-repeat="item in todos" ng-class="$odd ? 'odd' : 'even'">
+					<td>{{$index + 1}}</td>
 					<td>{{item.action}}</td>
-					<td>{{item.complete}}</td>
-				</tr>
--->
-				<tr ng-repeat="item in todos">
-<!--
-						<td ng-repeat="prop in item">{{prop}}</td>
--->
-					<td ng-repeat="(key, value) in item">{{key}} = {{value}}</td>
+					<td><span ng-if="$first || $last">{{item.complete}}</span></td>
 				</tr>
 			</tbody>
 		</table>
