303ページ目まで

--- a/angularjs/WebContent/example12_02.html
+++ b/angularjs/WebContent/example12_02.html
@@ -26,6 +26,13 @@ form .ng-invalid.ng-dirty {
 form .ng-valid.ng-dirty {
 	background-color: lightgreen;
 }
+form .ng-invalid-required.ng-dirty {
+    background-color: lightpink;
+}
+form .ng-invalid-email.ng-dirty {
+    background-color: lightgoldenrodyellow;
+}
+
 span.summary.ng-invalid {
     color:red;
     font-weight: bold;
