--- a/angularjs/WebContent/example14_template.html
+++ b/angularjs/WebContent/example14_template.html
@@ -60,35 +60,34 @@
 </script>
 </head>
 <body ng-controller="defaultCtrl">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3>
-                Products
-                <span class="label label-primary">{{products.length}}</span>
-            </h3>
-        </div>
-        
-        <div class="panel-body">
-            <table class="table table-striped table-bordered table-condensed">
-                <thead>
-                    <tr>
-                        <td>Name</td>
-                        <td>Category</td>
-                        <td>Expiry</td>
-                        <td class="text-right">Price</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="p in products">
-                        <td>{{p.name}}</td>
-                        <td>{{p.category}}</td>
-                        <td>{{p.expiry}}</td>
-                        <td class="text-right">{{p.price}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3>
+				Products <span class="label label-primary">{{products.length}}</span>
+			</h3>
+		</div>
+
+		<div class="panel-body">
+			<table class="table table-striped table-bordered table-condensed">
+				<thead>
+					<tr>
+						<td>Name</td>
+						<td>Category</td>
+						<td>Expiry</td>
+						<td class="text-right">Price</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="p in products">
+						<td>{{p.name}}</td>
+						<td>{{p.category}}</td>
+						<td>{{p.expiry}}</td>
+						<td class="text-right">{{p.price}}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+
 </body>
 </html>
