--- a/angularjs/WebContent/example14_12.html
+++ b/angularjs/WebContent/example14_12.html
@@ -80,7 +80,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="p in products">
+					<tr ng-repeat="p in products | skip:2 | limitTo:5">
 						<td>{{p.name | labelCase}}</td>
 						<td>{{p.category | labelCase: true}}</td>
 						<td>{{p.expiry}}</td>
