--- a/angularjs/WebContent/example19_18.html
+++ b/angularjs/WebContent/example19_18.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="exampleApp">
 <head>
-<title>Eｘpressions</title>
+<title>Expressions</title>
 <script src="/js/angular.js"></script>
 <link href="/css/bootstrap.css" rel="stylesheet" />
 <link href="/css/bootstrap-theme.css" rel="stylesheet" />
