--- a/angularjs/WebContent/example22_01.html
+++ b/angularjs/WebContent/example22_01.html
@@ -4,17 +4,17 @@
 <title>RESTful Web Services</title>
 <script src="/js/angular.js"></script>
 <script src="/js/angular-resource.js"></script>
+<script src="/js/angular-route.js"></script>
 <link href="/css/bootstrap.css" rel="stylesheet" />
 <link href="/css/bootstrap-theme.css" rel="stylesheet" />
-<script src="/js22/products_template.js"></script>
+<script src="/js22/products_01.js"></script>
 <script src="/js22/increment_template.js"></script>
 <base href="/" />
 </head>
 <body ng-controller="defaultCtrl">
     <div class="panel panel-primary">
         <h3 class="panel-heading">Products</h3>
-        <ng-include src="'example22_tableView_template.html'" ng-show="displayMode == 'list'"></ng-include>
-        <ng-include src="'example22_editorView_template.html'" ng-show="displayMode == 'edit'"></ng-include>
+        <div ng-view></div>
     </div>
 </body>
 </html>
